Clear input on enter works Exercise complete

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header>
     <h1>What You See Is What You Get</h1>
     </header>
-      <input class="input-field" id="inputText" type="text" size="75"><br>
+      <p>Edit any bio by clicking on a card:</p> <input class="input-field" id="inputText" type="text" size="75"><br>
       <h2>Famous Guo</h2>
       <div class="output-box" id="outputBox"></div>
     <script src="js/wysiwyg.js"></script>
